@@ -1,3 +1,11 @@
+2009-12-18  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* Driver.cs, MoonlightChannelBaseExtension.cs, CommandLineOptions.cs:
+	  Added event-based async generator support (/tcv:35).
+	  Some refactoring on async method generation.
+	  Removed IExtensibleDataObject usage in moonlight proxy.
+	  Added notes on MT profile + sync impossibility (so far).
+
 2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* Driver.cs, MoonlightChannelBaseExtension.cs, CommandLineOptions.cs:
